tests/golden/reject/compound_assign_const_ident_overflow_reject.goo
// Correctness arc 7 (n): compound assignment (`v += a`) converts the
// constant to the target's type first (Go semantics), so representability
// applies exactly as for plain assignment. Shift-assigns (`v <<= a`) are
// deliberately EXCLUDED from the gate — their RHS is a shift count, not a
// value converting to the target type.
package main

func main() {
	const a = 300
	var v int8 = 1
	v += a
	println(v)
}
